TP-22 Fixed text cut off on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,10 +84,17 @@ h3 {
 .home-header {
   font-family: "Montserrat", sans-serif;
   font-size: 3.2rem;
+  display: flex;
   color: var(--text);
-  text-align: center;
+  justify-content: center;
   padding-top: 15rem;
   text-shadow: 0px 4px 4px rgba(122, 123, 126, 0.45);
+}
+
+@media only screen and (max-width: 450px) {
+  .home-header {
+    font-size: 2rem;
+  }
 }
 
 .container {
@@ -96,18 +103,18 @@ h3 {
   height: 100vh;
 }
 
-
 .content {
   position: absolute;
   top: 0;
   color: #f1f1f1;
   background-color: rgba(0, 0, 0, 0.7);
-  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0;
+  max-width: 100%;
+
 }
 
 .sub-content {
@@ -116,6 +123,14 @@ h3 {
 }
 
 .bg-video {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
+
+.bg-img {
   width: 100%;
   height: 100vh;
 }
